--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 input::placeholder {
-  color: grey !important;
+  color: #a59b98 !important;
   font-family: Domine !important;
   font-weight: 600 !important;
 }
