--- a/src/Assets/css/style.scss
+++ b/src/Assets/css/style.scss
@@ -1,37 +1,26 @@
 @font-face {
   font-family: "Domine";
   src: url("../fonts/Domine-Regular.eot");
-  src: url("../fonts/Domine-Regular.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/Domine-Regular.woff2") format("woff2"),
-    url("../fonts/Domine-Regular.woff") format("woff"),
-    url("../fonts/Domine-Regular.ttf") format("truetype"),
-    url("../fonts/Domine-Regular.svg#Domine-Regular") format("svg");
+  src: url("../fonts/Domine-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/Domine-Regular.woff2") format("woff2"), url("../fonts/Domine-Regular.woff") format("woff"),
+    url("../fonts/Domine-Regular.ttf") format("truetype"), url("../fonts/Domine-Regular.svg#Domine-Regular") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
-
 @font-face {
   font-family: "Domine";
   src: url("../fonts/Domine-Bold.eot");
-  src: url("../fonts/Domine-Bold.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/Domine-Bold.woff2") format("woff2"),
-    url("../fonts/Domine-Bold.woff") format("woff"),
-    url("../fonts/Domine-Bold.ttf") format("truetype"),
-    url("../fonts/Domine-Bold.svg#Domine-Bold") format("svg");
+  src: url("../fonts/Domine-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Domine-Bold.woff2") format("woff2"), url("../fonts/Domine-Bold.woff") format("woff"),
+    url("../fonts/Domine-Bold.ttf") format("truetype"), url("../fonts/Domine-Bold.svg#Domine-Bold") format("svg");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
-
 @font-face {
   font-family: "Domine";
   src: url("../fonts/Domine-SemiBold.eot");
-  src: url("../fonts/Domine-SemiBold.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/Domine-SemiBold.woff2") format("woff2"),
-    url("../fonts/Domine-SemiBold.woff") format("woff"),
-    url("../fonts/Domine-SemiBold.ttf") format("truetype"),
-    url("../fonts/Domine-SemiBold.svg#Domine-SemiBold") format("svg");
+  src: url("../fonts/Domine-SemiBold.eot?#iefix") format("embedded-opentype"), url("../fonts/Domine-SemiBold.woff2") format("woff2"), url("../fonts/Domine-SemiBold.woff") format("woff"),
+    url("../fonts/Domine-SemiBold.ttf") format("truetype"), url("../fonts/Domine-SemiBold.svg#Domine-SemiBold") format("svg");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -39,11 +28,8 @@
 @font-face {
   font-family: "Oswald";
   src: url("../fonts/Oswald-Regular.eot");
-  src: url("../fonts/Oswald-Regular.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/Oswald-Regular.woff2") format("woff2"),
-    url("../fonts/Oswald-Regular.woff") format("woff"),
-    url("../fonts/Oswald-Regular.ttf") format("truetype"),
-    url("../fonts/Oswald-Regular.svg#Oswald-Regular") format("svg");
+  src: url("../fonts/Oswald-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/Oswald-Regular.woff2") format("woff2"), url("../fonts/Oswald-Regular.woff") format("woff"),
+    url("../fonts/Oswald-Regular.ttf") format("truetype"), url("../fonts/Oswald-Regular.svg#Oswald-Regular") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -62,14 +48,14 @@ $gd-bg: #dcba80; //Gold color
 $font-oswald: "Oswald";
 $font-domine: "Domine";
 /*Common Style*/
-* {
+.bodyWrapper {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
-body {
+.bodyWrapper {
   font-size: 14px;
   color: $tc-bk;
   font-weight: 400;
@@ -77,67 +63,69 @@ body {
   font-family: $font-oswald !important;
   background: $body-bg !important;
   overflow-x: hidden;
+
+  figure,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p {
+    padding: 0;
+    margin: 0;
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p {
+    font-weight: 400;
+    font-style: normal;
+    margin: 0;
+    padding: 0;
+  }
+  button,
+  input,
+  select,
+  textarea {
+    outline: 0 !important;
+  }
+  a,
+  a:focus,
+  a:hover {
+    text-decoration: none;
+  }
+  a:focus,
+  button:focus,
+  input:focus {
+    outline: 0 none;
+  }
+  ol,
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  table {
+    border-spacing: 0;
+    border-collapse: collapse;
+  }
+  td,
+  th {
+    padding: 0;
+  }
+  label {
+    font-weight: 400;
+    margin-bottom: 0;
+  }
+  .row {
+    --bs-gutter-x: 0 !important;
+  }
 }
-figure,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  padding: 0;
-  margin: 0;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  font-weight: 400;
-  font-style: normal;
-  margin: 0;
-  padding: 0;
-}
-button,
-input,
-select,
-textarea {
-  outline: 0 !important;
-}
-a,
-a:focus,
-a:hover {
-  text-decoration: none;
-}
-a:focus,
-button:focus,
-input:focus {
-  outline: 0 none;
-}
-ol,
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-table {
-  border-spacing: 0;
-  border-collapse: collapse;
-}
-td,
-th {
-  padding: 0;
-}
-label {
-  font-weight: 400;
-  margin-bottom: 0;
-}
-.row {
-  --bs-gutter-x: 0 !important;
-}
+
 .wrapper {
   h2 {
     font: 45px/66px $font-oswald;
@@ -852,12 +840,15 @@ label {
     }
   }
 }
+
 .wrapper .howdoes .dot-line:first-child:before {
   display: none;
 }
+
 .wrapper .howdoes .dot-line:last-child:after {
   display: none;
 }
+
 i.ic-arrow {
   width: 20px;
   height: 25px;
@@ -914,6 +905,7 @@ i.ic-arrow {
     }
   }
 }
+
 .consult-lft-dts {
   background: url("../images/circle-bg-left.png") 0 0 no-repeat;
   background-size: 100% auto;
@@ -963,12 +955,14 @@ i.ic-arrow {
     }
   }
 }
+
 .wrapper .howdoes figure.consult-img {
   width: auto;
   height: auto;
   background-color: transparent;
   border-radius: 0;
 }
+
 .wrapper .howdoes .consult-lft-dts p {
   font: 18px/24px "Segoe UI";
   padding: 20px 0 0;
