enter button bug fix

--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,8 @@ input {
   font-weight: 600 !important;
 }
 #amp path {
-  fill: white!important;
+  fill: white !important;
+}
+*:focus {
+  outline: none !important;
 }
