stepper color bug fixes

--- a/src/CreateConsultantComponents/Home/Home.css
+++ b/src/CreateConsultantComponents/Home/Home.css
@@ -154,3 +154,12 @@
     right: 40%;
   }
 }
+.MuiStepIcon-text {
+  fill: black !important ;
+}
+.Home-active-5 > .MuiStepIcon-text {
+  fill: white !important ;
+}
+.Home-active-6 > .MuiStepIcon-text {
+  fill: white !important ;
+}
