--- a/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
+++ b/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
@@ -175,6 +175,7 @@
   font-family: Oswald;
   font-size: 1.5em;
   text-align: center;
+  margin-top: 10px;
 }
 
 @media only screen and (max-width: 768px) {
