--- a/src/Assets/css/responsive.scss
+++ b/src/Assets/css/responsive.scss
@@ -32,6 +32,7 @@
     height: 49px;
   }
 }
+
 @media (max-width: 1599px) {
   .wrapper .banner-blk .banner-bg {
     height: 565px;
@@ -107,7 +108,7 @@
     line-height: 40px;
   }
   .wrapper .partners .gray-box {
-    min-height: 300px;
+    min-height: 450px;
   }
   .wrapper .havemore {
     padding: 50px 0;
@@ -223,6 +224,7 @@
     text-align: center;
     img {
       width: 200px;
+      margin-left: -40px;
     }
   }
   .back-btn {
@@ -305,6 +307,7 @@
   }
   .wrapper .partners .gray-box {
     margin: 0 0 15px;
+    min-height: 550px ;
   }
   .wrapper .hearfrom .hearfrom-slide {
     text-align: center;
@@ -419,7 +422,7 @@
     display: none;
   }
   .wrapper .partners .gray-box {
-    min-height: inherit;
+    min-height: 500px;
     padding: 30px !important;
     border: 0;
     text-align: center;
