--- a/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
+++ b/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
@@ -99,6 +99,8 @@
   font-weight: 300;
   color: #ffffff;
   text-align: center;
+  margin: auto;
+  width: 180px;
 }
 .pcFooterCard {
   background: #6f6c6d;
@@ -111,10 +113,12 @@
   cursor: pointer;
 }
 .pcFooterLeftMargin {
-  margin-left: 18vw;
+  width: 1000px;
+  margin: auto;
 }
 .pcCardMarginLeft {
-  margin-left: 20vw;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 3em;
 }
 .pcFooterNextIcon {
@@ -205,6 +209,10 @@
     height: 22em;
     overflow: hidden;
   }
+  .pcFooterLeftMargin {
+    margin-left:160px;
+    width: 500px;
+  }
 }
 
 @media only screen and (max-width: 550px) {
@@ -246,6 +254,7 @@
   }
   .pcFooterLeftMargin {
     margin-left: 50px;
+    width: 500px;
   }
   .paymentConfirmationHead {
     font-family: Oswald;
@@ -300,7 +309,7 @@
     margin-left: 2em;
   }
   .pcConsultantNumber {
-    background: #F0EAE8;
+    background: #f0eae8;
     height: 3em;
     width: 15.8em;
     margin-bottom: 2.5em;
@@ -432,7 +441,7 @@
     margin-left: 50px;
   }
   .pcFooterLeftMargin {
-    margin-left: 25px;
+    margin-left: 35px;
   }
 }
 
@@ -447,7 +456,7 @@
     margin-left: 30px;
   }
   .pcFooterLeftMargin {
-    margin-left: 8px;
+    margin-left: 15px;
   }
 }
 
@@ -462,6 +471,6 @@
     margin-left: 25px;
   }
   .pcFooterLeftMargin {
-    margin-left: 0px;
+   margin-left: 10px;
   }
 }
