--- a/src/CreateConsultantComponents/MobileHeader/Header.css
+++ b/src/CreateConsultantComponents/MobileHeader/Header.css
@@ -54,6 +54,7 @@
   padding-top: 20px !important;
   padding-left: 20px !important;
   padding-bottom: 40px !important;
+  z-index: 10 !important;
 }
 
 .mobileHeaderHeight1 {
@@ -67,6 +68,7 @@
   padding-top: 20px !important;
   padding-left: 20px !important;
   padding-bottom: 40px !important;
+  z-index: 10 !important;
 }
 
 .MuiPaper-root {
