--- a/src/CreateConsultantComponents/PurchaseKit/PurchaseKit.css
+++ b/src/CreateConsultantComponents/PurchaseKit/PurchaseKit.css
@@ -118,7 +118,14 @@
   font-size: 12px;
   color: red;
   font-family: Domine;
-  width: 272px;
+  width: 372px;
+}
+.errorMesCVV {
+  font-size: 12px;
+  color: red;
+  font-family: Domine;
+  width: 372px;
+  margin-left: 45px !important;
 }
 .form-control:focus {
   border-color: none;
@@ -341,7 +348,7 @@
     width: 32vw;
   }
   .mobileCVV {
-    width: 30vw;
+    width: 50vw;
   }
   .mobileTotalTitle {
     width: 88px;
@@ -402,4 +409,3 @@
     margin-left: -11px !important;
   }
 }
-
