--- a/src/Assets/css/style.scss
+++ b/src/Assets/css/style.scss
@@ -351,7 +351,7 @@ body {
     }
   }
   .whyscout {
-    padding: 100px 0;
+    padding: 180px 0 125px;
     h2 {
       padding: 0 0 50px;
     }
@@ -637,7 +637,7 @@ body {
         padding: 20px 0 30px;
       }
       h3 {
-        font: 24px/18px $font-oswald;
+        font: 24px/26px $font-oswald;
         font-weight: 400;
         color: $tc-bk;
         span {
@@ -704,7 +704,7 @@ body {
     }
   }
   .letsget {
-    padding: 100px 0;
+    padding: 50px 0 100px;
     .container-xxl,
     .container-xl,
     .container-lg,
